--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,4 +15,4 @@ exclude = [".github"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serde = { version = "1.0", features = ["derive"] }
+serde = "1.0"
