--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,5 +18,9 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build
       run: cargo build --verbose
+    - name: Build with features
+      run: cargo build --all-features --verbose
+    - name: Build without features
+      run: cargo build --no-default-features --verbose
     - name: Run tests
       run: cargo test --verbose
