--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,9 @@ repository = "https://github.com/eopb/redact"
 edition = "2021"
 exclude = [".github"]
 
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-serde = "1.0"
+serde = { version = "1.0", optional = true }
+
+[package.metadata.docs.rs]
+all-features = true
+
