--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "redact"
-version = "0.0.8"
+version = "0.0.9"
 authors = ["Ethan Brierley <ethanboxx@gmail.com>"]
 license = "MIT/Apache-2.0"
 readme = "README.md"
@@ -14,6 +14,9 @@ exclude = [".github"]
 
 [dependencies]
 serde = { version = "1.0", optional = true }
+
+[dev-dependencies]
+serde = { version = "1.0", features = ["derive"] }
 
 [package.metadata.docs.rs]
 all-features = true
