--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,11 @@ repository = "https://github.com/eopb/redact"
 edition = "2021"
 exclude = [".github"]
 
+[features]
+default = ["std"]
+# impl std::error::Error for Secret<E> where E: Error
+std = []
+
 [dependencies]
 serde = { version = "1.0", optional = true, default-features = false }
 
