--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "redact"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Ethan Brierley <ethanboxx@gmail.com>"]
 license = "MIT/Apache-2.0"
 readme = "README.md"
@@ -16,9 +16,12 @@ exclude = [".github"]
 default = ["std"]
 # impl std::error::Error for Secret<E> where E: Error
 std = []
+fake = ["dep:fake", "dep:rand"]
 
 [dependencies]
 serde = { version = "1.0", optional = true, default-features = false }
+fake = { version = "2.5", optional = true, default-features = false }
+rand = { version = "0.8", optional = true, default-features = false }
 
 [dev-dependencies]
 serde = { version = "1.0", features = ["derive"] }
