--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -11,16 +11,16 @@ env:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
+    steps:
+    - uses: taiki-e/install-action@cargo-hack
+    - name: build
+      run: cargo hack build --feature-powerset
+    - name: test
+      run: cargo hack test --feature-powerset
+  fmt:
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - name: Build
-      run: cargo build --verbose
-    - name: Build with features
-      run: cargo build --all-features --verbose
-    - name: Build without features
-      run: cargo build --no-default-features --verbose
-    - name: Run tests
-      run: cargo test --all-features --verbose
+    - name: fmt
+      run: cargo fmt --check
