Test doesn't work for all features due to doc tests

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,12 +15,16 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - uses: taiki-e/install-action@cargo-hack
-    - name: hmm
-      run: ls
     - name: build
       run: cargo hack build --feature-powerset
     - name: test
       run: cargo hack test --feature-powerset
+  test:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: test
+      run: cargo test
   fmt:
     runs-on: ubuntu-latest
     steps:
