--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -8,19 +8,32 @@ on:
 
 env:
   CARGO_TERM_COLOR: always
+  RUSTFLAGS: -D warnings
+  RUSTDOCFLAGS: -D warnings
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v3
-    - name: Build
-      run: cargo build --verbose
-    - name: Build with features
-      run: cargo build --all-features --verbose
-    - name: Build without features
-      run: cargo build --no-default-features --verbose
-    - name: Run tests
-      run: cargo test --all-features --verbose
+    - uses: taiki-e/install-action@cargo-hack
+    - name: build
+      run: cargo hack build --feature-powerset
+  test:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: test
+      run: cargo test --all-features
+  fmt:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: fmt
+      run: cargo fmt --check
+  doc:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: doc
+      run: cargo doc --all-features
