--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,12 +19,14 @@ std = []
 fake = ["dep:fake", "dep:rand"]
 
 [dependencies]
-serde = { version = "1.0", optional = true, default-features = false }
 fake = { version = "2.5", optional = true, default-features = false }
 rand = { version = "0.8", optional = true, default-features = false }
+serde = { version = "1.0", optional = true, default-features = false }
 
 [dev-dependencies]
+fake = { version = "2.5", features = ["derive"] }
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 [package.metadata.docs.rs]
 all-features = true
