--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,5 +32,5 @@ serde_json = "1.0"
 
 [package.metadata.docs.rs]
 all-features = true
-rustdoc-args = ["--cfg", "docsrs"]
+rustdoc-args = ["--generate-link-to-definition", "--cfg", "docsrs"]
 
