--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,17 +20,20 @@ default = ["std"]
 std = []
 fake = ["dep:fake", "dep:rand"]
 serde = ["dep:serde"]
+zeroize = ["dep:zeroize"]
 
 [dependencies]
 fake = { version = "2.5", optional = true, default-features = false }
 rand = { version = "0.8", optional = true, default-features = false }
 serde = { version = "1.0", optional = true, default-features = false }
+zeroize = { version = "1.7", optional = true, default-features = false }
 
 [dev-dependencies]
-redact = { features = ["serde", "fake"], path = "." }
+redact = { features = ["serde", "fake", "zeroize"], path = "." }
 fake = { features = ["derive"] }
 serde = { features = ["derive"] }
 serde_json = "1.0"
+zeroize = { features = ["std"] }
 
 [package.metadata.docs.rs]
 all-features = true
