chore: make `serde` feature explicit
This makes the `serde` feature more clearly part of the public API.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ default = ["std"]
 # impl std::error::Error for Secret<E> where E: Error
 std = []
 fake = ["dep:fake", "dep:rand"]
+serde = ["dep:serde"]
 
 [dependencies]
 fake = { version = "2.5", optional = true, default-features = false }
