--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,8 +28,8 @@ serde = { version = "1.0", optional = true, default-features = false }
 
 [dev-dependencies]
 redact = { features = ["serde", "fake"], path = "." }
-fake = { version = "2.5", features = ["derive"] }
-serde = { version = "1.0", features = ["derive"] }
+fake = { features = ["derive"] }
+serde = { features = ["derive"] }
 serde_json = "1.0"
 
 [package.metadata.docs.rs]
