--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,10 +30,10 @@ zeroize = { version = "1.7", optional = true, default-features = false }
 
 [dev-dependencies]
 redact = { features = ["serde", "fake", "zeroize"], path = "." }
-fake = { features = ["derive"] }
-serde = { features = ["derive"] }
+fake = { version = "2.5", features = ["derive"] }
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-zeroize = { features = ["std"] }
+zeroize = { version = "1.7", features = ["std"] }
 
 [package.metadata.docs.rs]
 all-features = true
